# asst2_meshedit

./: CMakeLists.txt  README.md  index.html  params.json
CMU462/: CMakeLists.txt
CMU462/examples/: CMakeLists.txt  text.cpp  triangle.cpp
CMU462/include/CMU462/: complex.h  matrix3x3.h  matrix4x4.h  osdtext.h  quaternion.h  vector2D.h  vector4D.h  viewer.h
CMU462/src/: CMakeLists.txt  color.cpp  color.h  matrix4x4.cpp  matrix4x4.h  osdtext.cpp  renderer.h  vector2D.cpp  vector3D.cpp  vector3D.h  vector4D.cpp  vector4D.h  viewer.cpp
CMU462/tests/: CMakeLists.txt  osd.cpp
dae/: bean.dae  beetle.dae  cow.dae  cube.dae  peter.dae  quadball.dae  teapot.dae
dae/cube/: edgeCollapse.dae  edgeFlip.dae  edgeSplit.dae  input.dae
dae/icosahedron/: edgeCollapse.dae  edgeFlip.dae  edgeSplit.dae  input.dae
dae/torus/: edgeCollapse.dae  edgeFlip.dae  edgeSplit.dae  input.dae
docs/: Doxyfile  mainpage.md
docs/html/: annotated.html  camera_8h_source.html  class_c_m_u462_1_1_face-members.html  class_c_m_u462_1_1_face.html  class_c_m_u462_1_1_halfedge-members.html  class_c_m_u462_1_1_halfedge.html  class_c_m_u462_1_1_halfedge_element-members.html  class_c_m_u462_1_1_halfedge_element.html  class_c_m_u462_1_1_vertex-members.html  class_c_m_u462_1_1_vertex.html  classes.html  collada_8h_source.html  collada_viewer_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  half_edge_mesh_8h_source.html  hierarchy.html  index.html  inherits.html  light_8h_source.html  material_8h_source.html  mesh_8h_source.html  png_8h_source.html  scene_8h_source.html  student__code_8h_source.html  texture_8h_source.html
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  functions_2.js  (+6 more)
src/: CMakeLists.txt  camera.cpp  camera.h  collada.cpp  collada.h  halfEdgeMesh.cpp  halfEdgeMesh.h  light.cpp  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  meshEdit.cpp  meshEdit.h  scene.cpp  scene.h  student_code.cpp  student_code.h  texture.cpp  texture.h
